# jaffle-shop-template

./: .dockerignore  .env.example  .gitignore  .sqlfluff  .sqlfluffignore  ANALYSIS.md  Dockerfile  IAC-COMPARISON.md  INFRA.md  MF.md  Makefile  README.md  ROLES.md  TODO.md  Taskfile.yml  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml  pr.yml
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: athena_dispatch.sql  cents_to_dollars.sql
dbt/models/staging/: stg_locations.yml  stg_products.sql
dbt/seeds/jaffle-data/: raw_items.csv  raw_orders.csv  raw_products.csv  raw_stores.csv  raw_supplies.csv  raw_tweets.csv
infra/: .gitignore  app.py  cdk.json  requirements.txt
infra-pulumi/: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  requirements.txt
infra-terraform/: README.md  data.tf  ecr.tf  ecs.tf  iam.tf  network.tf  outputs.tf  s3.tf  scheduler.tf  variables.tf  versions.tf
infra/jaffle_shop_infra/: stack.py
