[project]
name = "jaffle-shop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dbt-duckdb>=1.10.1",
    "go-task-bin>=3.52.0",
    "jafgen>=0.4.14",
    "pre-commit>=4.6.0",
    "requests>=2.34.2",
    "sqlfluff-templater-dbt>=4.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "ty>=0.0.61",
]
