[project]
name = "jaffle-shop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dbt-athena-community>=1.11.0",
    "dbt-duckdb>=1.10.1",
    "go-task-bin>=3.52.0",
    "jafgen>=0.4.14",
    "prek>=0.4.10",
    "requests>=2.34.2",
    "sqlfluff-templater-dbt>=4.2.2",
]

[dependency-groups]
dev = [
    "dbt-metricflow[dbt-duckdb]>=0.13.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "ty>=0.0.61",
]

[tool.uv]
# dbt-core 1.11.12 pins mashumaro<3.15, but mashumaro <3.15 crashes on
# Python 3.14 (UnserializableField on Optional[str] in JSONObjectSchema).
# dbt-common (the actual consumer) allows mashumaro<4.0,>=3.9, so forcing a
# newer mashumaro than dbt-core's stale upper bound is safe here.
override-dependencies = ["mashumaro[msgpack]>=3.17"]

[tool.ty.src]
# infra/ is a self-contained CDK app with its own venv/requirements.txt (see
# INFRA.md) -- aws-cdk-lib/constructs aren't part of this project's
# dependencies, so the root .venv can't resolve infra/'s imports. Explicit
# paths (e.g. `ty check infra` from infra/'s own venv) still check it.
exclude = ["infra"]
